2002-01-21  Jeff Zucker <jeff@vpservices.com> (0.2001)

	* adjusted docs to show Jeff as the new maintainer.

	* added docs for extended SQL features (joins, etc.)
	  available with SQL::Statement 1.0 and above.

	* adjusted tests blobs.t, chopblanks.t, and ak-dbd.t
	  to work with all versions of SQL::Statement.

2002-12-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1030)

        * lib/DBD/File.pm: Locking is now suppressed under
          VMS. David Webb <d.webb@mdx.ac.uk>
        * lib/DBD/CSV.pm: Added a hint to the docs, that
          "f_dir=" is required for the current directory
          on VMS and not "f_dir=.". David Webb
          <d.webb@mdx.ac.uk>

2001-11-28  Jochen Wiedmann  <joe@ispsoft.de> (0.1029)

	* lib/DBD/CSV.pm (fetch_row): A numeric value
	  must be assigned to $!.

2001-11-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1028)

	* lib/DBD/CSV.pm (fetch_row): Changed "undef $!"
	  to "$! = ''". David Arnold <arnoldd@aecl.ca>

2001-05-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1026)

	* lib/DBD/File.pm (table_info): Added closedir().
	  Alex Hornby <alex@anvil.co.uk>

2000-12-22  Jochen Wiedmann  <joe@ispsoft.de> (0.1025)

	* lib/DBD/CSV.pm (fetch_row): Now cleaning $! before
	  calling $csv->getline(). Seems to return false errors
	  otherwise in some cases. Jeremy Wadsack
	  <jwadsack@wadsack-allen.com>
	* Made Makefile.PL CPAN conformant.
	* Removed unnecessary stuff in Makefile.PL which verified
	  the DBI installation.

2000-07-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1023)

	* lib/DBD/File.pm (STORE): Changed croak to die.
	  Guido Flohr <guido@imperia.westend.com>	  

2000-07-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1023)

	* Minor fix in the docs, thanks to Andreas Grupp,
	  grupp@elektronikschule.de.
	* Minor compatibility fixes in the test suite for
	  Perl 5.6.

1999-10-07  Jochen Wiedmann  <joe@ispsoft.de> (0.1022)

	* lib/DBD/File.pm (connect): In the DSN, \ was removed in
	  all cases. It is now possible to use \\ for a DSN