@@ -10,6 +10,8 @@
 #
 #   Include lib.pl
 #
+
+
 $mdriver = "";
 foreach $file ("lib.pl", "t/lib.pl") {
     do $file; if ($@) { print STDERR "Error while executing lib.pl: $@\n";
