@@ -1,3 +1,12 @@
+2002-03-01  Jeff Zucker <jeff@vpservices.com> (0.2002)
+
+	* added parser-caching for speedier operation,
+	  see File.pm prepare()
+
+	* further adjustments in tests including fix for
+	  prototypes to make it perl 5.8 compatible
+
+
 2002-01-21  Jeff Zucker <jeff@vpservices.com> (0.2001)
 
 	* adjusted docs to show Jeff as the new maintainer.
